hphp/hack/test/typecheck/sketchy_null_check_bool.php.exp
File "sketchy_null_check_bool.php", line 4, characters 7-8:
You are using a sketchy null check on a primitive type ...
Use $b !== null instead (Typing[4089])
