hphp/hack/test/typecheck/sketchy_null_check_bool.php
<?hh // strict

function test(?bool $b): void {
  if ($b) {
  }
}
